--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -113,7 +113,7 @@ libaa_la_OBJECTS =  aafont.lo aafonts.lo aavyhen.lo aamktabl.lo aamem.lo \
 aaprintf.lo aahelp.lo aaslnkbd.lo aaslang.lo aafastre.lo aalinux.lo \
 aalinuxkbd.lo aax.lo aaxkbd.lo aaxmouse.lo fontgl.lo font16.lo \
 font14.lo fontx16.lo fontx13.lo fontx13b.lo fontcour.lo aarec.lo \
-font9.lo font8.lo fontline.lo aacurses.lo aacurkbd.lo aacurmou.lo \
+font9.lo font8.lo fontline.lo aacurses.lo aaweb.lo aacurkbd.lo aacurmou.lo \
 aalib.lo aaflush.lo aarender.lo aaout.lo aain.lo aaedit.lo aaregist.lo \
 aakbdreg.lo aagpm.lo aamoureg.lo aasave.lo aastdout.lo aastdin.lo \
 aaparse.lo aaimgwidth.lo aaimgheight.lo aascrwidth.lo aascrheight.lo \
